<resources>
    <string name="app_name">app-java</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="stop_monitoring">stop monitoring</string>
    <string name="start_monitoring">start monitoring</string>
    <string name="waiting_for_raw_signal">waiting for raw signal...</string>
    <string name="waiting_for_blink_signal">waiting for blink signal...</string>
    <string name="waiting_for_meditation_signal">waiting for meditation signal...</string>
    <string name="waiting_for_attention_signal">waiting for attention signal...</string>
    <string name="waiting_for_state">waiting for state...</string>

    <string name="action_about">About</string>
    <string name="takeoff">TakeOff</string>
    <string name="land">Land</string>
    <string name="neurofly">NeuroFly</string>
    <string name="connectTello">Connect</string>

    <!-- Strings related to Settings -->
    <string-array name="Commands">
        <item>command</item>
        <item>speed?</item>
        <item>battery?</item>
        <item>time?</item>
        <item>takeoff</item>
        <item>land</item>
        <item>cw 90</item>
        <item>cw 180</item>
        <item>cw 360</item>
        <item>ccw 90</item>
        <item>ccw 180</item>
        <item>ccw 360</item>
        <item>forward 40</item>
        <item>forward 80</item>
        <item>back 40</item>
        <item>back 80</item>
        <item>left 40</item>
        <item>left 80</item>
        <item>right 40</item>
        <item>right 80</item>
        <item>up 40</item>
        <item>up 80</item>
        <item>down 40</item>
        <item>down 80</item>
        <item>speed 25</item>
        <item>speed 50</item>
        <item>speed 100</item>
        <item>flip l</item>
        <item>flip r</item>
        <item>flip f</item>
        <item>flip b</item>
        <item>flip bl</item>
        <item>flip rb</item>
        <item>flip fl</item>
        <item>flip fr</item>
    </string-array>
    <string name="title_activity_directions">Directions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_direction">DirectionActivity</string>
</resources>
